services/api_management/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-management-clusterip-service
  labels:
    app: api-management
spec:
  type: ClusterIP
  selector:
    app: api-management
  ports:
    - port: 80
      targetPort: 7002
