services/api_management/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-management-ingress
spec:
  ingressClassName: azure-application-gateway        
  tls:
  - secretName: ingress-ssl
  rules:
    - host: apimgmt-dev.trackwizz.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-management-clusterip-service
                port: 
                  number: 80
